# quiz-api

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
configuration/: nginx.conf
src/: main.rs
src/data/: http_error.rs  mod.rs
src/data/logos/: logo.rs  mod.rs  upload.rs
src/data/quizes/: mod.rs  question.rs  quiz.rs  quiz_modification.rs
src/handlers/: mod.rs
src/handlers/logos/: upload.rs
src/handlers/quizes/: create.rs  delete.rs  get.rs  list.rs  update.rs
src/providers/: mod.rs  mongodb.rs  s3.rs
src/utils/: catchers.rs  error.rs  mod.rs  openapi.rs
