[package]
name = "quiz-rocket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.2.1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.0", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.24.0"
aws-smithy-types = "1.1.8"
futures = "0.3.30"
mongodb = "2.8.2"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.198"
utoipa = "4.2.0"
utoipa-redoc = { version = "3.0.0", features = ["rocket"] }
uuid = { version = "1.8.0", features = ["v4"] }
